@@ -2,6 +2,7 @@
  * fix Salesforce API (thanks to https://github.com/jhorowitz-firedrum)
  * remove 'final' from methods in OAuth[10a|20]Service to allow mocking it
  * fix Pinterest API (thanks to https://github.com/sschwieb)
+ * add Yahoo2 API (thanks to https://github.com/javatestcase)
 
 [5.2.0-java7again]
  * allow 'null' as callback. It's an optional parameter. Remove "oob" as default (thanks to https://github.com/massongit)
